tests/negative/gold/assign3-test.gold
tests/negative/assign3-test.toit:5:5: error: Unexpected token '='. Did you mean ':='?
foo = 499
    ^
tests/negative/assign3-test.toit:8:7: error: Unexpected token '='. Did you mean ':='?
  bar = 42
      ^
Compilation failed
